--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,22 @@
 {
     "name" : "Session Saver",
-    "version" : "1.0.1",
+    "version" : "1.0.0",
     "description" : "Saves Chrome sessions for reload at a later date",
     "permissions" : ["tabs", "storage"],
     "browser_action" : {
-        "default_popup" : "popup.html"
+        "default_popup" : "popup.html",
+        "default_icon" : {
+            "16" : "logo_images/logo16.png",
+            "32" : "logo_images/logo32.png",
+            "64" : "logo_images/logo64.png",
+            "128" : "logo_images/logo128.png"
+        }
+    },
+    "icons" : {
+        "16" : "logo_images/logo16.png",
+        "32" : "logo_images/logo32.png",
+        "64" : "logo_images/logo64.png",
+        "128" : "logo_images/logo128.png"
     },
     "manifest_version" : 2
 }
